test/data/expectedout/correcterr.txt
Parse error on line 1:
2*(-3!!
-------^
Expecting ',', '==', '<', '>', '&&', '||', '!', '@', '&', '-', '+', '*', '/', '**', ')', got '1'
